css/main.css
/* ... */
.header {
    text-align: center;
    position: fixed;
    z-index: 10;
    left: 0;
    top: 0;
    right: 0;
    transition: 0.5s ease-in-out;
    height: 40px;
    line-height: 40px;
}

.ul_header > li:hover {
    background-color: rgba(0, 0, 0, 0.1);
}

.ul_header > li:after {
    background-color: black;
    display: block;
    content: "";
    height: 2px;
    width: 0;
    transition: width .3s ease-in-out;
}

.ul_header > li:hover:after,
.ul_header > li:focus:after {
    width: 100%;
}

.nav-link {
    color: black !important;
    min-width: 110px;
}

.navbar {
    padding: 0;
}

.navbar-nav {
    margin: 0 auto;
}

.block_photo {
    padding: 70px 0;
}

.photo {
    height: 300px;
    border: 1px solid black;
    border-radius: 50%;
}

.contacts {
    font-family: 'Noto Serif', serif;
    height: 100px;
    margin: auto 0;
    position: absolute;
    top: 0; right: 0;
    bottom: 0;
}

.contacts > p {
    margin-bottom: 10px;
    letter-spacing: 1px;
}

.contacts > p > a:hover {
    border-bottom: 1px solid black;
}

.icon {
    background-size: contain;
    height: 20px;
    width: 20px;
    display: block;
    float: left;
    margin-right: 5px;
}

.name {
    background-image: url('../images/wp.PNG');
}

.tg {
    background-image: url('../images/tg.png');
}

.vk {
    background-image: url('../images/vk.png');
}

.mail {
    background-image: url('../images/mail.png');
}

.github {
    background-image: url('../images/github.png');
}

.select {
    background-image: url('../images/select.png');
}

.close {
    background-image: url('../images/close.png');
}

.block_skills {
    overflow: hidden;
    background: rgba(0, 0, 0, 0.85);
}

.skills {
    margin: 50px 0;
}

.window_slills {
    background-color: white;
    border: 1px solid white;
    height: 100%;
    padding-bottom: 40px;
}

.skills_head {
    width: 100%;
    height: 50px;
    background-color: black;
    color: white;
    text-align: center;
    line-height: 50px;
    font-size: 20px;
}

.window_slills > p {
    padding: 10px;
}

.block_job {
    overflow: hidden;
    padding-top: 10px;
    padding-bottom: 50px;
}

.block_job > h1 {
    color: black !important;
    text-shadow: none;
}

.block_completed_tasks {
    background: rgba(0, 0, 0, 0.85);
    overflow: hidden;
    padding-top: 10px;
    padding-bottom: 50px;
}

.block_completed_tasks h1 {
    margin-bottom: 20px;
}

.block_completed_tasks a {
    display: block;
}

.block_completed_tasks .container a:hover {
    text-decoration: underline;
}

.slide {
    height: 100%;
    width: 100%;
    box-shadow: white 0 0 10px;;
}

.block_job .carousel {
    margin: 30px auto;
}

.block_job .carousel-indicators {
    top: 102%;
}

.block_job .carousel-inner {
    border: 1px solid black;
}

.block_job .carousel-inner p {
    color: black;
    padding: 10px;
    font-size: 20px;
}

.block_job .carousel-inner p a:hover {
    text-decoration: underline;
}

.carousel-control-next {
    background: linear-gradient(to left, rgba(0, 0, 0, 0.2), transparent);
}

.carousel-control-prev {
    background: linear-gradient(to right, rgba(0, 0, 0, 0.2), transparent);
}

.carousel-caption {
    background-color: rgba(0, 0, 0, 0.6);
}

.carousel-caption h3 {
    color: white;
    font-size: 30px;
}

.carousel-caption p {
    color: white !important;
}

.carousel-caption a {
    margin-top: 5px;
}

.carousel-indicators li {
    background-color: gray;
}

.carousel-indicators .active {
    background-color: black;
}

.block_certificates {
    overflow: hidden;
}

.block_certificates h1 {
    color: black;
    text-shadow: none;
}

.window_certificate {
    background-color: white;
    box-shadow: black 0 0 25px;
    height: 99%;
}

.window_certificate:hover {
    box-shadow: black 0 0 10px;
}

footer {
    background: rgba(0, 0, 0, 0.85);
    overflow: hidden;
    padding-top: 30px;
    padding-bottom: 20px;
    color: white;
}

/* Стили адаптивности */

.adaptability_wrapper {
    width: 1000px;
    border: 1px solid black;
    margin: 0 auto;
}

.block_1, .block_2 {
    width: 600px;
    height: 150px;
    margin: 20px auto;
    border-bottom-right-radius: 40px;
    border-top-left-radius: 40px;
    background-color: blue;
    box-shadow: 0 0 10px;
}

.block_3 {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 200px;
    width: 290px;
    height: 150px;
    background-color: blue;
    border-top-left-radius: 40px;
    box-shadow: 0 0 10px;
    float: left;
}

.block_4 {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 20px;
    width: 290px;
    height: 150px;
    background-color: blue;
    border-bottom-right-radius: 40px;
    box-shadow: 0 0 10px;
    float: left;
}

.card {
    width: 100%;
    margin-bottom: 20px;
}

@media(min-width:0px) and (max-width:320px) {
    .adaptability_wrapper {
        width: 250px;
    }
    .block_1, .block_2 {
        background-color: yellow;
        width: 200px;
        height: 50px;
        margin: 10px auto;
    }
    .block_3, .block_4 {
        background-color: yellow;
        width: 200px;
        height: 50px;
        margin: 10px auto;
        border-bottom-right-radius: 40px;
        border-top-left-radius: 40px;
        float: none;
    }
    .photo {
        height: 90px;
    }
    .contacts > p {
        font-size: 10px;
    }
    .carousel-caption {
        padding-top: 20px;
        padding-bottom: 0;
    }
    .carousel-caption h3 {
        font-size: 16px;
    }
    .carousel-caption p {
        font-size: 10px !important;
    }
    .carousel-caption a {
        margin-bottom: 0;
    }
    .skills {
        margin: 10px 0;
    }
    .icon {
        width: 10px;
        height: 10px;
    }
    .carousel-caption {
        right: 2%;
        left: 2%;
        bottom: 2%;
    }
    .btn {
        font-size: 0.8em;
        padding: .100rem .30rem;
    }
    .job-github {
        display: none;
    }
}
/* ... */

